--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class="page-container">
     <div class="card-container">
+        <div class="transparent-layer"></div>
         <div class="card-header">
             <div class="card-header__icon"></div>
             <div class="card-header__date"></div>
@@ -21,9 +22,9 @@
                 <input type="text" id="new-task" class="add-task-modal__content" placeholder="Añade tu tarea">
                 <button class="add-task-modal__button">Añadir</button>
             </div>
-            <div class="task-adding-section">
-                <button class="task-adding-section__button">+</button>
-            </div>
+        </div>
+        <div class="card-footer">
+            <button class="add__button"><span>+</span></button>
         </div>
     </div>
     <script type="text/javascript" src="./index.js"></script>
